--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -7,6 +7,7 @@
     android:background="#979595"
     tools:context=".InscriptionActivity">
 
+    <!-- Logo Application-->
     <ImageView
         android:id="@+id/logo_inscription_app"
         android:layout_width="@dimen/logo_inscription_app_width"
@@ -19,6 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Champs titre prenom-->
     <TextView
         android:id="@+id/prenom_title"
         android:layout_width="@dimen/title_field_inscription_width"
@@ -32,6 +34,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo_inscription_app" />
 
+    <!-- Champs de saisie prenom-->
     <EditText
         android:id="@+id/new_prenom"
         android:layout_width="@dimen/input_text_inscription_width"
@@ -45,6 +48,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo_inscription_app" />
 
+    <!-- Champs titre nom-->
     <TextView
         android:id="@+id/nom_title"
         android:layout_width="@dimen/title_field_inscription_width"
@@ -59,6 +63,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/prenom_title" />
 
+    <!-- Champs de saisie nom-->
     <EditText
         android:id="@+id/new_nom"
         android:layout_width="@dimen/input_text_inscription_width"
@@ -72,6 +77,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_prenom" />
 
+    <!-- Champs titre adresse mail-->
     <TextView
         android:id="@+id/adressemail_title"
         android:layout_width="@dimen/title_field_inscription_width"
@@ -86,6 +92,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nom_title" />
 
+    <!-- Champs de saisie adresse mail-->
     <EditText
         android:id="@+id/newadressemail"
         android:layout_width="@dimen/input_text_inscription_width"
@@ -100,6 +107,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_nom" />
 
+    <!-- Champs titre mot de passe-->
     <TextView
         android:id="@+id/mot_de_passe_title"
         android:layout_width="@dimen/title_field_inscription_width"
@@ -114,6 +122,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adressemail_title" />
 
+    <!-- Champs de saisie mot de passe-->
     <EditText
         android:id="@+id/newmot_de_passe"
         android:layout_width="@dimen/input_text_inscription_width"
@@ -128,6 +137,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newadressemail" />
 
+    <!-- Champs titre date de naissance-->
     <TextView
         android:id="@+id/date_de_naissance_title"
         android:layout_width="@dimen/title_field_inscription_width"
@@ -142,6 +152,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mot_de_passe_title" />
 
+    <!-- Bouton calendrier-->
     <Button
         android:id="@+id/newdate_de_naissance"
         android:layout_width="@dimen/input_text_inscription_width"
@@ -159,6 +170,7 @@
         android:startYear="1900"
         android:endYear="2050"/>
 
+    <!-- Champs titre goal-->
     <TextView
         android:id="@+id/goal_title"
         android:layout_width="@dimen/title_field_inscription_width"
@@ -173,6 +185,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/date_de_naissance_title" />
 
+    <!-- Liste déroulante goal-->
     <Spinner
         android:id="@+id/newgoal"
         android:layout_width="@dimen/input_text_inscription_width"
@@ -185,6 +198,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newdate_de_naissance" />
 
+    <!-- Bouton retour-->
     <Button
         android:id="@+id/button_goback"
         android:layout_width="@dimen/button_goback_width"
@@ -198,6 +212,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <!-- Bouton inscription-->
     <Button
         android:id="@+id/button_inscrip"
         android:layout_width="@dimen/button_inscrip_width"
