--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,26 +8,73 @@
     tools:context=".MapActivity">
 
 
-
-
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        mapbox:mapbox_cameraTargetLat = "48.859489"
-        mapbox:mapbox_cameraTargetLng = "2.320582"
-        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
-        mapbox:mapbox_cameraZoom = "12.60"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        mapbox:mapbox_cameraTargetLat="48.859489"
+        mapbox:mapbox_cameraTargetLng="2.320582"
 
 
-        >
+        mapbox:mapbox_cameraZoom="12.60"
+        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10">
 
 
         <Button
             android:id="@+id/button"
-            android:layout_width="match_parent"
+            android:layout_width="311dp"
             android:layout_height="58dp"
+            android:background="@android:color/transparent"
             android:text="Recherche" />
+
+        <LinearLayout
+            android:layout_width="315dp"
+            android:layout_height="60dp"
+            android:orientation="horizontal"></LinearLayout>
+
+        <TableLayout
+            android:id="@+id/id_user"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </TableLayout>
+
     </com.mapbox.mapboxsdk.maps.MapView>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="64dp"
+        android:layout_height="53dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:scaleType="centerInside"
+        mapbox:srcCompat="@drawable/ic_user" />
+
+    <ImageButton
+        android:id="@+id/image_button"
+        style="@android:style/Widget.Holo.ImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:visibility="visible"
+        mapbox:srcCompat="@drawable/ic_menu_mylocation" />
+
+</RelativeLayout>
