--- a/app/src/main/res/layout/activity_user_profil.xml
+++ b/app/src/main/res/layout/activity_user_profil.xml
@@ -59,15 +59,16 @@
             android:textSize="14sp" />
 
         <ImageButton
+            android:id="@+id/button_parametre"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
             android:adjustViewBounds="true"
+            android:onClick="@image_parameter"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_settings"
-            android:onClick="@image_parameter"/>
+            app:srcCompat="@drawable/ic_settings" />
 
     </RelativeLayout>
 
@@ -124,6 +125,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/button_deconnexion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
