--- a/app/src/main/res/layout/activity_user_setting.xml
+++ b/app/src/main/res/layout/activity_user_setting.xml
@@ -26,7 +26,7 @@
 
 
         <TextView
-            android:id="@+id/tv_address"
+            android:id="@+id/user_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_name"
@@ -37,7 +37,7 @@
             android:textColor="@color/address"
             android:textSize="14sp" />
 
-        <ImageButton
+        <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
