--- a/app/src/main/res/layout/activity_user_profil.xml
+++ b/app/src/main/res/layout/activity_user_profil.xml
@@ -28,7 +28,8 @@
                 android:adjustViewBounds="true"
                 android:background="@drawable/circle"
                 android:padding="3dp"
-                android:scaleType="centerInside" />
+                android:scaleType="centerInside"
+                android:src="@drawable/avatar" />
 
         </RelativeLayout>
 
@@ -66,6 +67,18 @@
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
             android:src="@drawable/ic_settings" />
+
+        <ImageView
+            android:id="@+id/button_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="22dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/mapbox_marker_icon_default" />
 
     </RelativeLayout>
 
