--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -36,7 +36,7 @@
             android:layout_height="match_parent"></TableLayout>
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/button_research"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             mapbox:srcCompat="?android:attr/actionModeWebSearchDrawable" />
@@ -52,7 +52,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="0dp"
         android:scaleType="centerInside"
-        mapbox:srcCompat="@drawable/ic_user" />
+        mapbox:srcCompat="@drawable/avatar" />
 
     <ImageButton
         android:id="@+id/image_button"
