--- a/app/src/main/res/layout/activity_user_setting.xml
+++ b/app/src/main/res/layout/activity_user_setting.xml
@@ -16,26 +16,12 @@
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imgUser"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15sp"
             android:fontFamily="sans-serif-light"
-            android:text="@string/user_name"
+            android:text="@string/setting"
             android:textColor="@color/white"
             android:textSize="32sp" />
-
-
-        <TextView
-            android:id="@+id/user_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_name"
-            android:layout_centerHorizontal="true"
-            android:fontFamily="sans-serif"
-            android:text="@string/user_place"
-            android:textAllCaps="true"
-            android:textColor="@color/address"
-            android:textSize="14sp" />
 
         <ImageView
             android:id="@+id/button_back"
@@ -49,6 +35,5 @@
             app:srcCompat="@drawable/retour" />
 
     </RelativeLayout>
-
 
 </RelativeLayout>
