--- a/app/src/main/res/layout/activity_user_setting.xml
+++ b/app/src/main/res/layout/activity_user_setting.xml
@@ -81,7 +81,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 
                     <Switch
                         android:id="@+id/switch1"
-                        android:layout_width="wrap_content"
+                        android:layout_width="49dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
@@ -174,6 +174,31 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/setting_authorization"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
+
+                <TextView
+                    android:id="@+id/authorization"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:text="@string/authorization"
+                    android:textColor="#000000"
+                    android:textSize="18sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/grey" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/setting_contact"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -187,6 +212,31 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:text="@string/contact"
+                    android:textColor="#000000"
+                    android:textSize="18sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/grey" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/setting_legal_notice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
+
+                <TextView
+                    android:id="@+id/legal_notice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:text="@string/legal_notice"
                     android:textColor="#000000"
                     android:textSize="18sp" />
 
