--- a/app/src/main/res/layout/activity_run_app.xml
+++ b/app/src/main/res/layout/activity_run_app.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/frameLayout"
-    tools:context=".RunAppActivity"
+    tools:context=".launcher.RunAppActivity"
     android:background="#F0FF3F">
 
     <!-- Logo Application-->
