--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#979595"
-    tools:context=".InscriptionActivity">
+    tools:context=".launcher.InscriptionActivity">
 
     <!-- Logo Application-->
     <ImageView
