--- a/app/src/main/res/layout/activity_user_profil.xml
+++ b/app/src/main/res/layout/activity_user_profil.xml
@@ -7,7 +7,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".UserProfilActivity">
+        tools:context=".profile.UserProfilActivity">
         <RelativeLayout
             android:id="@+id/rellay1"
             android:layout_width="match_parent"
