--- a/app/src/main/res/layout/activity_user_profil.xml
+++ b/app/src/main/res/layout/activity_user_profil.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".profile.UserProfilActivity">
@@ -26,9 +26,9 @@
                 android:background="@drawable/circle_border">
 
                 <ImageView
+                    android:id="@+id/pp"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
-                    android:layout_margin="9dp"
                     android:adjustViewBounds="true"
                     android:background="@drawable/circle"
                     android:padding="3dp"
@@ -82,6 +82,23 @@
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
                 app:srcCompat="@drawable/mapbox_marker_icon_default" />
+
+            <Button
+                android:id="@+id/buttonChoose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="120dp"
+                android:text="Choose" />
+
+            <Button
+                android:id="@+id/buttonUpload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="300dp"
+                android:layout_marginTop="120dp"
+                android:text="Upload" />
+
         </RelativeLayout>
 
         <LinearLayout
